--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <div class="flip-card mt-2">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
-                    <img src="../public/images/book1.jpg" alt="Avatar" style="width:200px; height:250px;">
+                    <img src="public/images/book1.jpg" alt="Avatar" style="width:200px; height:250px;">
                   </div> 
                   <div class="flip-card-back">
                     <a href="book1.html">
@@ -188,7 +188,7 @@
             <div class="flip-card mt-2">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
-                    <img src="../public/images/book2.jpg" alt="Avatar" style="width:200px; height:250px;">
+                    <img src="public/images/book2.jpg" alt="Avatar" style="width:200px; height:250px;">
                   </div> 
                   <div class="flip-card-back">
                     <a href="book2.html">
@@ -201,7 +201,7 @@
             <div class="flip-card mt-2">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
-                    <img src="../public/images/book3.jpeg" alt="Avatar" style="width:200px; height:250px;">
+                    <img src="public/images/book3.jpeg" alt="Avatar" style="width:200px; height:250px;">
                   </div> 
                   <div class="flip-card-back">
                     <a href="book3.html">
