--- a/book1.html
+++ b/book1.html
@@ -117,7 +117,7 @@
 
     <main>
         <div class="book-container">
-            <img src="../public/images/book1.jpg" alt="AI Valley Book Cover">
+            <img src="public/images/book1.jpg" alt="AI Valley Book Cover">
             <h1>Ratan Tata</h1>
             <h2>A Life of Ratan Tata's journey</h2>
             <h3>By Thomas Mathew</h3>
