--- a/book2.html
+++ b/book2.html
@@ -117,7 +117,7 @@
 
     <main>
         <div class="book-container">
-            <img src="../public/images/book2.jpg" alt="AI Valley Book Cover">
+            <img src="public/images/book2.jpg" alt="AI Valley Book Cover">
             <h1>Shrimad Bhagwat Geeta</h1>
             <h2>श्रृष्टी का सार" (Srishti ka Saar)</h2>
             <h3>By A.C. Bhaktivendanta Swami Prabhupada</h3>
