--- a/book3.html
+++ b/book3.html
@@ -117,7 +117,7 @@
 
     <main>
         <div class="book-container">
-            <img src="../public/images/book3.jpeg" alt="AI Valley Book Cover">
+            <img src="public/images/book3.jpeg" alt="AI Valley Book Cover">
             <h1>The Laws of Human Nature</h1>
             <h2>Understanding and Mastering the Nature of Human Behavior</h2>
             <h3>By Robert Greene</h3>
