--- a/book1.html
+++ b/book1.html
@@ -223,7 +223,7 @@
               <div class="d-flex justify-content-center">
                 <div class="feedback1">
                   <label for="" class="form-check-label text-secondary">Email</label>
-                  <input type="email" class="form-control"><br>
+                  <input type="email" class="form-control" size="60"><br>
                   <textarea class="w-100 form-control" placeholder="Share Your Valuable FeedBack with Us"></textarea>
                   <button type="button" class="btn btn-warning mt-2 mb-3">Send</button>
                 </div>
